# toothprint

./: .gitignore  CHANGELOG.md  CITATION.cff  CLINICAL_READINESS.md  LICENSE  MODEL_CARD.md  PAPER.md  README.md  REPRODUCE.md  RISK.md  SECURITY.md  app.js  index.html  pyproject.toml  studio.html  styles.css
api/: __init__.py  main.py
change/: .env.example  .gitignore  AGENTS.md  README.md  REPRODUCIBILITY.md  RESULTS.md  pyproject.toml
change/dcc/: __init__.py  cli.py  geometry.py  runtime.py
change/dcc/artifacts/: __init__.py  manifest.py
change/dcc/benchmark/: pipeline.py  real_image_eval.py  shift_eval.py
change/dcc/calibration/: __init__.py
change/dcc/certificate/: __init__.py
change/dcc/config/: __init__.py  perturb_ranges.yaml  thresholds.yaml
change/dcc/eval/: metrics.py  report.py
change/dcc/landmarks/: store.py
change/dcc/perturb/: __init__.py  acquisition.py  confounder.py  image_change.py  truechange.py
change/dcc/score/: periodontal.py  registration_change.py
change/dcc/splits/: __init__.py  checksums.py  freeze.py
change/docs/: CHATGPT_HANDOFF.md  DATA.md  DATASETS.md  dataset-risk-note.md
change/scripts/: diagnose_warp_detection.py  extract_perio_kpt.py  failure_gallery.py  fetch_data.sh  make_dcc_detector_visuals.py  make_dcc_plots.py  probe_confidence_recall.py  probe_registration_change.py  run_gate2.py  run_gate2_denpar.py  run_gate2_oracle.py  run_gate2_realimg.py  run_gate2_registration.py  run_m4_shift_eval.py  train_vitpose_detector.py  validate_phantom.py  validate_splits.py  visualize_landmarks.py
change/tests/: test_asymmetric_conformal.py  test_certificates.py  test_cli.py  test_config.py  test_confounder.py  test_denpar_adapter.py  test_difficulty_slices.py  test_eval_report.py  test_failure_gallery.py  test_gpu_runtime.py  test_image_pair_builder.py  test_image_perturb.py  test_landmarks.py  test_manifest.py  test_metrics_extended.py  test_pair_builder.py  test_periapical_lesions_adapter.py  test_perio_kpt_adapter.py  test_periodontal_score.py  test_perturbations.py  test_phantom_adapter.py  test_pipeline.py  test_real_denpar_adapter.py  test_real_image_change.py  test_registration_change.py  test_split_checksums.py  test_split_registry.py  test_splits_and_artifacts.py  test_vitpose_detector.py  test_weighted_conformal.py
desktop/: README.md  app.py  toothprint.spec
docs/: RECON_UPGRADES_2026.md
evaluation/: DATA_GATE.md  EXTERNAL_DATA.md  README.md  REPORT.md  SOTA.md  analyze.py
evaluation/results/: bufferx_baseline.json  bufferx_identity_full.json  change.json  change_e2e_v2.json  change_registration_detector.json  change_registration_gt.json  change_registration_noise.json  change_registration_yolo.json  change_repositioning.json  core_p2p.npy  correspondence_identity.json  correspondence_teeth3ds.json  dentalwork_2d.json  dentalwork_identity.json  det_curves.json  embedding_identity.json  embedding_partial.json  fusion_analysis.json  fusion_hard.json  fusion_matrices_n30_0p03_0p8.npz  gen_p2s.npy  hybrid_identity.json  id2d.json  id3d.json  id3d_robust.json  id3d_scale80.json  identity_analysis.json  imp_p2s.npy  multimodal_full.json  multimodal_identity.json  openset_hybrid.json  partial_probe.json  reconstruction.json  regional_identity.json  sonata_identity.json  surface.json  teeth3ds_identity.json  teeth3ds_identity_smoke_n40.json  unified_identity.json
evaluation/scripts/: RUN.md  analyze_identity.py  eval_bufferx_baseline.py  eval_bufferx_identity_full.py  eval_change.py  eval_correspondence.py  eval_correspondence_teeth3ds.py  eval_dentalwork.py  eval_dentalwork_2d.py  eval_embedding.py  (+37 more)
examples/: gsplat_reconstruct.py
identity/: README.md  pyproject.toml
identity/scripts/: make_identity_plots.py  run_landmark_identification.py  run_mesh_identification.py
identity/tests/: test_landmark_id.py  test_mesh_id.py
identity/toothid/: __init__.py  landmark_id.py  mesh_id.py
paper/: paper.tex  refs.bib
surface/: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RESULTS.md  pyproject.toml
surface/docs/: CHATGPT_HANDOFF.md  DATA.md  DATASETS.md  GPU_BASELINE_CONTRACT.md
surface/scripts/: failure_gallery_dmc.py  fetch_data.sh  make_dmc_plots.py  render_mesh_views.py  run_dmc_certificate_oracle.py  run_dmc_certificate_real.py  run_dmc_gate1.py  run_dmc_gate1_real.py  run_dmc_poseidon3d.py  run_dmc_reconstruction_real.py  run_dmc_teethland.py
surface/src/dentalmapcert/: __init__.py  baselines.py  calibration.py  capture_protocol.py  certificate.py  cli.py  coverage.py  eval_metrics.py  fusion.py  meshing.py  regions.py  render.py  report.py  schemas.py  surface_error.py
surface/tests/: test_certificate.py  test_cli.py  test_coverage_and_longitudinal.py  test_dataset_loaders.py  test_failure_gallery_dmc.py  test_meshing.py  test_perturbations_and_metrics.py  test_poseidon3d_and_teethland.py  test_reconstruction.py  test_regions.py  test_render.py  test_schemas_and_reports.py  test_surface_error.py
tests/: test_api.py  test_change.py  test_clinical.py  test_embedding.py  test_geometry.py  test_identity.py  test_io.py  test_surface.py
toothprint/: __init__.py  geometry.py
video/: README.md  demo.tape  make_showcase.py
web/: app.js  index.html  studio.html  styles.css
(+89 files in other folders)
