[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toothprint"
version = "1.0.0"
description = "Certified dental-imaging intelligence: identification, change, and surface certificates from teeth."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }   # PolyForm Noncommercial 1.0.0 — free for any non-commercial use, no resale
authors = [{ name = "Archerkattri", email = "krishiattriwork@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python-headless>=4.8",
    "open3d>=0.18",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9",
    "pydicom>=2.4", "nibabel>=5.1", "trimesh>=4.0", "tifffile>=2023.7",
    "Pillow>=10.0", "lxml>=4.9", "pylibjpeg>=2.0", "pylibjpeg-libjpeg", "pylibjpeg-openjpeg",
]
recon = ["torch>=2.4", "gsplat>=1.4"]  # Gaussian-Splatting reconstruction front end
io = [  # every medical format a dentist/oral-radiologist uses (radiographs, scans, CBCT)
    "pydicom>=2.4", "nibabel>=5.1", "trimesh>=4.0", "tifffile>=2023.7",
    "Pillow>=10.0", "lxml>=4.9", "pylibjpeg>=2.0", "pylibjpeg-libjpeg", "pylibjpeg-openjpeg",
]
desktop = [
    "pywebview>=5.0", "uvicorn>=0.27", "fastapi>=0.110", "python-multipart>=0.0.9",
    "pydicom>=2.4", "nibabel>=5.1", "trimesh>=4.0", "tifffile>=2023.7",
    "Pillow>=10.0", "lxml>=4.9", "pylibjpeg>=2.0", "pylibjpeg-libjpeg", "pylibjpeg-openjpeg",
]
dev = ["pytest>=8", "pytest-cov"]
plots = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["toothprint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# toothprint/bench is vendored research/benchmark code (data adapters, perturbations,
# the registration/conformal reference impls) exercised by evaluation/scripts and the
# committed result artifacts, not by the unit suite — kept out of the package coverage gate.
omit = ["toothprint/bench/*", "toothprint/identity/embedding.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
