[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dental-change-certificate"
version = "0.1.0"
description = "DentalChangeCert: GPU-ready certified intraoral dental radiograph change detection under acquisition uncertainty"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pillow>=9.0",
    "scipy>=1.10",
    "crepes>=0.9",  # conformal backend — core to the certificate, not optional
]

[project.optional-dependencies]
# Kept for backward compatibility; crepes is now a core dependency.
conformal = ["crepes>=0.9"]
detector  = ["torch>=2.4", "torchvision>=0.19", "transformers>=4.46", "timm>=1.0"]
dev       = ["pytest>=8", "pytest-cov"]
full      = ["dental-change-certificate[detector]"]

[project.scripts]
dcc = "dcc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["dcc*"]
