[project]
name = "toothid"
version = "0.1.0"
description = "ToothPrint dental biometric identification (3D meshes + 2D radiograph constellations)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "open3d>=0.18",  # FPFH + RANSAC + ICP registration for 3D arch identification
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]
plots = ["matplotlib>=3.7"]

[tool.setuptools]
packages = ["toothid"]
